kong/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: waste-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.5
          ports:
            - containerPort: 8000
            - containerPort: 8001
          volumeMounts:
            - name: kong-config-volume
              mountPath: /etc/kong
      volumes:
        - name: kong-config-volume
          configMap:
            name: kong-config
